# AudioAtlas

./: .gitattributes  .gitignore  AUDIO_RIGHTS.md  AUDIT.md  CONTRIBUTING.md  DEMO_AUDIO_PROVENANCE.txt  LICENSE  Makefile  PROJECT_CHARTER.md  PUBLIC_SNAPSHOT.json  README.md  README_EASY_RUN.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  macos-app.yml  macos-demo-candidate.yml  pages.yml  release.yml  testpypi.yml  windows-demo-candidate.yml
design/: README.md  lightbox_prototype.html
design/themes/: all_themes.md  theme_default.css  theme_studio_blue.css  theme_tokens.json
docs/: AGENT_START_PROMPT.md  AGENT_TASKS.md  ALPHA_LIMITATIONS.md  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  FINDING_RULES.md  HOPEFUL_SKEPTIC_PROJECT_EDITION.md  LAUNCHER_REHEARSAL.md  MACOS_APP_RELEASE.md  MACOS_DEMO_GUIDE.md  PROJECT_SCHEMA.md  SUMMARY_SCHEMA.md  USER_GUIDE.md  WINDOWS_DEMO_GUIDE.md  WINDOWS_PACKAGING_DESIGN.md
docs/archive/: CHANGELOG_PRE_0_2_0a2.md  README.md
docs/archive/agent/: AGENT_TASKS.md
docs/archive/design/themes/: all_themes.json  theme_gallery.html  theme_midnight.css  theme_moss.css  theme_preview.html  theme_profiles.md  theme_warm_tape.css
docs/archive/reviews/: AUDIOATLAS_GROK_REVIEW_0.2.0a4.md  AUDIOATLAS_HOPEFUL_SKEPTIC_REVIEW_0_2_0a2_GROK.md  AUDIOATLAS_REVIEW.md  FABLE_REVIEW_0.2.0a3.md
docs/assets/readme/: README.md
docs/calibration/: CALIBRATION_RUNBOOK.md  MANUAL_CALIBRATION_WORKSHEET.csv  README.md  finding_review_template.csv  musical_corpus_review_template.csv
docs/stewardship/: PUBLIC_RELEASE_MODEL.md
examples/: README.md
examples/demo_audio/: README.md
model_review_package/: AGENT_BRIEF.md  MANIFEST.md  REVIEW_PROMPT.md  calibration_context.md
model_review_package/calibration_reports/aster_after_findings_cleanup/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/DC_kMM_Censored/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/Malone_Doja_BOL4_iKon_medley/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/Prompt_Architect__Toking_On_Tokens/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/aster/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/birdcansing/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/bunnyparty/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/dittoguitar/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/hurt3/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/jarmedley/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/rept/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/sufjandry/: findings.json  report.md  summary.json
model_review_package/calibration_reports/calibration/sufjanm/: report.md  (+2 more)
model_review_package/calibration_reports/dittoguitar_after_findings_cleanup/: findings.json  report.md  summary.json
model_review_package/design/: README.md  report_mockup.html
model_review_package/docs/: CHANGELOG.md  SUMMARY_SCHEMA.md
packaging/common/: audioatlas_runtime_hook.py
packaging/macos/: AudioAtlas.entitlements  AudioAtlas.spec  audioatlas_runtime_hook.py
packaging/windows/: AudioAtlas.iss  AudioAtlas.spec
scripts/: __init__.py  audit_windows_distribution.py  build_macos_app.py  build_windows_app.py  check_package_index.py  export_public_tree.py  generate_calibration_fixtures.py  package_macos_dmg.py  package_windows_candidate.py  prepare_calibration_review.py  public_snapshot.py  replay_calibration_rules.py  run_audioatlas_mac.command  run_audioatlas_windows.bat  verify_public_snapshot.py  verify_windows_candidate.py
src/audioatlas/: __init__.py  __main__.py  alt_text.py  app_core.py  batch.py  catalog_report.py  cli.py  config.py  desktop_controller.py  desktop_runtime.py  desktop_smoke.py  errors.py  graph_profiles.py  html_report.py  io.py  macos_app.py  markdown.py  output.py  pipeline.py  plot_theme.py  presentation.py  project.py  provenance.py  release.py  report.py  revision_diff.py  run_contract.py  theme.py  utils.py  windows_app.py
src/audioatlas/analysis/: bundle.py  dynamics.py  findings.py  levels.py  loudness.py  spectral.py  spectral_features.py  stereo.py  tonal.py
src/audioatlas/graphs/: __init__.py  adapters.py  registry.py  selection.py
src/audioatlas/themes/: __init__.py  all_themes.json
src/audioatlas/visualize/: band_energy.py  chroma.py  histogram.py  loudness.py  onset.py  spectral_shape.py  spectrogram.py  spectrum.py  stereo.py  waveform.py
starter_kit/: LAUNCHER_REHEARSAL_LOG.md  README_FOR_NON_CODERS.md  RUN_FULL.bat  RUN_FULL.command  RUN_MINIMAL.bat  RUN_MINIMAL.command  RUN_SECTIONS_PROMPTED.bat  RUN_SECTIONS_PROMPTED.command  RUN_STANDARD.bat  RUN_STANDARD.command
tests/: conftest.py  test_alt_text.py  test_app_core.py  test_batch.py  test_calibration_fixtures.py  test_calibration_replay.py  test_calibration_review_preparation.py  test_cli.py  test_cli_hardening.py  test_config.py  test_demo_audio.py  test_demo_audio_source.py  test_desktop_controller.py  test_desktop_runtime.py  test_distribution_artifacts.py  test_dynamics.py  test_findings.py  test_golden.py  test_graph_registry.py  test_graph_selection.py  test_invariants.py  test_io.py  test_launchers.py  test_levels.py  test_loudness.py  test_macos_app.py  test_malformed_audio.py  test_markdown.py  test_output.py  test_package_index.py  test_package_macos_dmg.py  test_pipeline.py  test_plot_theme.py  test_presentation.py  test_project.py  test_provenance.py  test_public_export.py  test_public_snapshot.py  test_release.py  test_release_workflows.py  (+10 more)
tests/fixtures/: _build_golden.py  sine_1k_-6dbfs_2s.expected.json
tests/fixtures/malformed/: truncated.flac
