[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "audioatlas"
version = "0.1.0a1"
description = "A local single-track audio analysis framework for factual music maps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Charles Mish" }
]
# Keep this list minimal. Jinja2 / HTML rendering will land alongside the
# HTML report task in docs/AGENT_TASKS.md, not before.
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "soundfile>=0.13",
  "librosa>=0.11",
  "matplotlib>=3.8",
  "pyloudnorm>=0.1.1",
  "click>=8.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.10"
]

[project.scripts]
audioatlas = "audioatlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audioatlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
