[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "audioatlas"
version = "0.2.0a7"
description = "A local single-track audio analysis framework for factual music maps."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Charles Mish" }
]
keywords = ["audio", "analysis", "music", "mixing", "mastering", "reports"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
# Runtime dependencies for local analysis and static report generation.
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "soundfile>=0.13",
  "librosa>=0.11",
  # Numba 0.66.0 / llvmlite 0.48.0 stalled and crashed during a clean
  # Python 3.13 report smoke; 0.65.1 / 0.47.0 completed the same run.
  "numba>=0.65.1,<0.66",
  "matplotlib>=3.8",
  "pyloudnorm>=0.1.1",
  "click>=8.1",
  "PyYAML>=6.0",
  # Security floors for dependencies imported through Matplotlib and librosa.
  "Pillow>=12.3.0",
  "msgpack>=1.2.1",
  "filelock>=3.16,<4",
]

[project.urls]
Homepage = "https://github.com/CharlesMish/AudioAtlas"
Repository = "https://github.com/CharlesMish/AudioAtlas"
Issues = "https://github.com/CharlesMish/AudioAtlas/issues"
"Live report" = "https://charlesmish.github.io/AudioAtlas/"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hatchling>=1.25",
  "pytest>=8.0",
  "ruff>=0.8",
  "hypothesis>=6.100",
  "pip-audit>=2.10,<3",
]

[project.scripts]
audioatlas = "audioatlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audioatlas"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/README_EASY_RUN.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
  "/LICENSE",
  "/AUDIO_RIGHTS.md",
  "/pyproject.toml",
  "/docs",
  "/examples",
  "/scripts",
  "/starter_kit",
  "/DEMO_AUDIO_PROVENANCE.txt",
  "/Makefile",
]
exclude = [
  "/examples/demo_audio",
  "/examples/demo_audio/**",
  "/docs/archive",
  "/docs/archive/**",
  "/docs/calibration",
  "/docs/calibration/**",
  "/docs/stewardship",
  "/docs/stewardship/**",
  "/docs/AGENT_TASKS.md",
  "/docs/HOPEFUL_SKEPTIC_PROJECT_EDITION.md",
  "/docs/LAUNCHER_REHEARSAL.md",
  "/scripts/export_public_tree.py",
  "/scripts/generate_calibration_fixtures.py",
  "/scripts/prepare_calibration_review.py",
  "/scripts/replay_calibration_rules.py",
  "/starter_kit/LAUNCHER_REHEARSAL_LOG.md",
  "/tests/test_calibration_fixtures.py",
  "/tests/test_calibration_replay.py",
  "/tests/test_calibration_review_preparation.py",
  "/tests/test_demo_audio_source.py",
  "/tests/test_distribution_artifacts.py",
  "/tests/test_public_export.py",
  "/tests/test_release_workflows.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
